Removed / from imports

--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
     <script src="https://github.com/tmijs/tmi.js/releases/download/v1.8.3/tmi.min.js"></script>
     
     <!-- Import Twi -->
-    <script src="/twi.js"></script>
-    <link rel="stylesheet" href="/twi.css">
+    <script src="twi.js"></script>
+    <link rel="stylesheet" href="twi.css">
 </head>
 <body>
     <div id="app"></div>
@@ -38,6 +38,6 @@
     </div>
 
     <!-- Import ShowEmote code -->
-    <script src="/showemote.js"></script>
+    <script src="showemote.js"></script>
 </body>
 </html>
