Added visitor counter

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
     <div id="app"></div>
     <div id="login-form">
+        <a href="https://github.com/sammwyy/show-emote"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fgithub.com%2Fsammwyy%2Fshow-emote&count_bg=%233240FF&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=Visitors&edge_flat=false"/></a>
         <form>
             <h1>Show Emote</h1>
             <span>Channel Name</span>
