--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Show Emote by @Sammwy</title>
 
     <!-- Analytics -->
-    <script defer data-domain="sammwy.com" src="https://plausible.io/js/plausible.js"></script>
+    <script defer data-domain="show-emote.sammwy.com" src="https://plausible.io/js/plausible.js"></script>
 
     <!-- Impoty styles -->
     <link rel="stylesheet" href="assets/css/login.css">
@@ -18,6 +18,7 @@
             <div class="login-card-header">
                 <h1>Show Emote</h1>
                 <p>Allow viewers to place emotes on your stream screen from chat.</p>
+                <a href="https://github.com/sammwyy/show-emote"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fgithub.com%2Fsammwyy%2Fshow-emote&count_bg=%233240FF&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=Visitors&edge_flat=false"/></a>
             </div>
 
             <div class="login-card-body">
