--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
     <!-- Analytics -->
     <script defer data-domain="show-emote.sammwy.com" src="https://plausible.io/js/plausible.js"></script>
-
+    <script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
+    
     <!-- Impoty styles -->
     <link rel="stylesheet" href="assets/css/login.css">
 </head>
