--- a/widget.html
+++ b/widget.html
@@ -7,7 +7,8 @@
     <title>Show Emote by @Sammwy</title>
 
     <!-- Analytics -->
-    <script defer data-domain="sammwy.com" src="https://plausible.io/js/plausible.js"></script>
+    <script defer data-domain="show-emote.sammwy.com" src="https://plausible.io/js/plausible.js"></script>
+    <script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
 
     <!-- Import Tmi.js -->
     <script src="assets/js/tmi.min.js"></script>
