--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="login-card">
+        <div class="login-card" id="login-card">
             <div class="login-card-header">
                 <h1>Show Emote</h1>
                 <p>Allow viewers to place emotes on your stream screen from chat.</p>
