--- a/widget.html
+++ b/widget.html
@@ -1,28 +1,28 @@
+<!-- Legacy: index.html -->
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Show Emote by @Sammwy</title>
 
-    <!-- Analytics -->
-    <script defer data-domain="show-emote.sammwy.com" src="https://plausible.io/js/plausible.js"></script>
-    <script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
-
     <!-- Import Tmi.js -->
-    <script src="assets/js/tmi.min.js"></script>
-    
+    <script src="https://raw.githubusercontent.com/sammwyy/show-emote/refs/heads/legacy/assets/js/tmi.min.js"></script>
+
     <!-- Import Twi -->
-    <script src="assets/js/twi.js"></script>
+    <script src="https://raw.githubusercontent.com/sammwyy/show-emote/refs/heads/legacy/assets/js/twi.js"></script>
 
     <!-- Impoty styles -->
-    <link rel="stylesheet" href="assets/css/widget.css">
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="https://raw.githubusercontent.com/sammwyy/show-emote/refs/heads/legacy/assets/css/widget.css"
+    />
+  </head>
+  <body>
     <div id="app"></div>
 
     <!-- Import ShowEmote code -->
-    <script src="assets/js/showemote.js"></script>
-</body>
+    <script src="https://raw.githubusercontent.com/sammwyy/show-emote/refs/heads/legacy/assets/js/showemote.js"></script>
+  </body>
 </html>
